Reactive Refactoring: Namespace, DataSource, Collector (#587)