@@ -1,10 +1,10 @@
 package org.opendatadiscovery.oddplatform.auth.filter;
 
-import lombok.extern.slf4j.Slf4j;
-import org.opendatadiscovery.oddplatform.dto.DataSourceDto;
+import org.opendatadiscovery.oddplatform.dto.CollectorDto;
 import org.opendatadiscovery.oddplatform.exception.NotFoundException;
 import org.opendatadiscovery.oddplatform.ingestion.contract.model.DataEntityList;
-import org.opendatadiscovery.oddplatform.repository.DataSourceRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveCollectorRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveDataSourceRepository;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.http.HttpMethod;
@@ -14,18 +14,20 @@ import org.springframework.security.web.server.util.matcher.PathPatternParserSer
 import org.springframework.stereotype.Component;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Flux;
-import reactor.core.scheduler.Schedulers;
+import reactor.core.publisher.Mono;
 
 @Component
 @ConditionalOnProperty(value = "auth.ingestion.filter.enabled", havingValue = "true")
-@Slf4j
 public class IngestionDataEntitiesFilter extends AbstractIngestionFilter {
 
-    private final DataSourceRepository dataSourceRepository;
+    private final ReactiveDataSourceRepository dataSourceRepository;
+    private final ReactiveCollectorRepository collectorRepository;
 
-    public IngestionDataEntitiesFilter(final DataSourceRepository dataSourceRepository) {
+    public IngestionDataEntitiesFilter(final ReactiveDataSourceRepository dataSourceRepository,
+                                       final ReactiveCollectorRepository collectorRepository) {
         super(new PathPatternParserServerWebExchangeMatcher("/ingestion/entities", HttpMethod.POST));
         this.dataSourceRepository = dataSourceRepository;
+        this.collectorRepository = collectorRepository;
     }
 
     @Override
@@ -34,18 +36,31 @@ public class IngestionDataEntitiesFilter extends AbstractIngestionFilter {
             @Override
             public Flux<DataBuffer> getBody() {
                 return super.getBody().collectList()
-                    .publishOn(Schedulers.boundedElastic())
-                    .doOnNext(dataBuffer -> {
+                    .flatMapMany(dataBuffer -> {
                         final DataEntityList body = readBody(dataBuffer, DataEntityList.class);
                         final String token = resolveToken(exchange.getRequest());
-                        final DataSourceDto dataSourceDto = dataSourceRepository.getByOddrn(body.getDataSourceOddrn())
-                            .orElseThrow(() -> new NotFoundException(
-                                String.format("DataSource with oddrn %s doesn't exist", body.getDataSourceOddrn())
-                            ));
-                        if (!dataSourceDto.token().tokenPojo().getValue().equals(token)) {
-                            throw new AccessDeniedException("Token is not correct");
-                        }
-                    }).flatMapIterable(list -> list);
+
+                        return dataSourceRepository.getDtoByOddrn(body.getDataSourceOddrn())
+                            .switchIfEmpty(Mono.error(new NotFoundException(
+                                "DataSource with oddrn %s doesn't exist".formatted(body.getDataSourceOddrn()))))
+                            .flatMap(dto -> {
+                                if (dto.token() != null) {
+                                    return Mono.just(dto.token());
+                                } else {
+                                    return collectorRepository.getDto(dto.dataSource().getCollectorId())
+                                        .switchIfEmpty(Mono.error(new NotFoundException(
+                                            "Collector with id %s doesn't exist".formatted(dto.dataSource()
+                                                .getCollectorId()))))
+                                        .map(CollectorDto::tokenDto);
+                                }
+                            })
+                            .doOnNext(dto -> {
+                                if (!dto.tokenPojo().getValue().equals(token)) {
+                                    throw new AccessDeniedException("Token is not correct");
+                                }
+                            })
+                            .flatMapIterable(ignored -> dataBuffer);
+                    });
             }
         };
     }
